2004-11-29  Daniel Berlin  <dberlin@dberlin.org>

Fix PR tree-optimization/18673

	* tree-ssa-pre.c: Remove splay-tree.h include.
	(bitmap_value_replace_in_set): Fix to add if it does not exist.
	(find_or_generate_expression): Remove now-wrong condition.
	(create_expression_by_pieces): Fix condition and comment reason
	for it.
	(insert_aux): Fix condition and comment reasons for it.
	Factor insertion code from here.
	(insert_into_preds_of_block): To here.  Fix conditions in factored
	function and comment reasons for them.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@91522 138bc75d-0d04-0410-961f-82ee72b054a4